# BizMind

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.observability.yml  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/agent/: __init__.py  graph.py  state.py
backend/app/agent/nodes/: critique.py  generate.py  grade.py  retrieve.py  rewrite.py  router.py  web_search.py
backend/app/agent/prompts/: critique.system.txt  generate.system.txt  generate.user.j2  grade.system.txt  oos.system.txt  rewrite.system.txt  router.system.txt
backend/app/api/: router.py
backend/app/api/v1/: admin.py  auth.py  chat.py  documents.py  eval.py  health.py  threads.py
backend/app/core/: exceptions.py  logging.py  pagination.py  rate_limit.py  rbac.py
backend/app/db/: session.py
backend/app/models/: __init__.py
backend/app/observability/: __init__.py  langfuse_integration.py
backend/app/rag/: __init__.py  chunker.py  embedder.py  embedding_cache.py  llm_client.py  qdrant_store.py  retriever.py
backend/app/schemas/: auth.py  chat.py  document.py  eval.py  thread.py
backend/app/services/: agent_chat_service.py  auth_service.py  chat_service.py  document_service.py  eval_service.py  health_service.py  indexing_service.py  thread_service.py
backend/tests/: conftest.py  test_agent_chat_service.py  test_agent_nodes.py  test_auth.py  test_auth_unit.py  test_chunker.py  test_core.py  test_eval_service.py  test_golden_qa.py  test_graph_routes.py  test_health.py  test_llm_embedder.py  test_observability.py  test_retriever.py  test_tenant_security.py
data/: eval-results.json  golden_qa.jsonl
data/demo_docs/: DISCLAIMER.md
data/demo_docs/erp/: inventory-sop.md
data/demo_docs/his/: outpatient-guide.md
data/demo_docs/workpal/: defect-severity.md
docs/: README.md  agent-workflow.md  api-spec.md  api.md  architecture.md  coding-standards.md  database-schema.md  decisions.md  deployment.md  design.md  dev.md  development-guide.md  eval-benchmark.md  interview-script.md  interview-talking-points.md  p1-backlog.md  progress.md  requirements.md  test-plan.md  todo0616.md  todo0619.md  项目设计.md
docs/adr/: 001-langgraph-over-pipeline.md  002-qdrant-over-chroma.md  003-parent-child-chunking.md  004-document-version-threads.md  005-baseline-rag-control.md  README.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useHealth.ts
frontend/src/pages/: AdminPage.tsx  ChatPage.tsx  DocumentsPage.tsx  EvalPage.tsx  Layout.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/test/: ChatPage.test.tsx  sse.test.ts
scripts/: demo.ps1  dev.ps1  eval_rag.py  seed_demo_docs.py  setup_db.py
