[project]
name = "bizmind-backend"
version = "0.1.0"
description = "BizMind enterprise knowledge assistant API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "structlog>=24.4.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "httpx>=0.28.0",
    "redis>=5.2.0",
    "qdrant-client>=1.12.0",
    "python-multipart>=0.0.18",
    "pydantic[email]>=2.13.4",
    "psycopg2-binary>=2.9.12",
    "langgraph>=1.2.5",
    "langgraph-checkpoint>=4.1.1",
    "langchain-core>=1.4.7",
    "rank-bm25>=0.2.2",
    "ragas>=0.4.3",
    "langchain-google-vertexai>=3.2.4",
    "langchain-community<0.4",
    "pymupdf>=1.27.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "aiosqlite>=0.22.1",
]
observability = [
    "langfuse>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]  # B008: FastAPI Depends() in function signatures is idiomatic

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py"]


